# PortfolioWeb

./: .dockerignore  .gitignore  .npmrc  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  storage_config.py
.github/workflows/: ci.yml
P_App/: apps.py  urls.py  views.py
P_App/templates/P_App/: email_sent.html  email_template.html  index.html  main.html
Portfolio/: settings.py  urls.py
adapters/static/: vite.config.ts
src/: global.css
src/components/nav/: nav.tsx
src/routes/: index.tsx
static/css/: style.css
static/js/: app.js
staticfiles/css/: index.css
staticfiles/js/: app.js
