[project]
name = "portfolio"
version = "0.1.0"
description = "Personal portfolio website built with Django."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "django-storages>=1.14",
    "boto3>=1.34",
    "dj-database-url>=2.1",
    "gunicorn>=22.0",
    "whitenoise>=6.6",
]

[tool.uv]
# This is a Django application, not an installable package.
package = false
